// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scenario I 1`] = `"<div><button data-testid=\\"button\\" type=\\"button\\">Move</button></div>"`;

exports[`Scenario I 2`] = `
"<div>{
  \\"data\\": null,
  \\"loading\\": true,
  \\"timestamp\\": 0
  }</div>
<div><button data-testid=\\"button\\" type=\\"button\\">Move</button></div>"
`;

exports[`Scenario I 3`] = `
"<div>{
  \\"data\\": \\"data\\",
  \\"loading\\": false,
  \\"timestamp\\": 1572220801000
  }</div>
<div><button data-testid=\\"button\\" type=\\"button\\">Move</button></div>"
`;

exports[`Scenario I 4`] = `
"<div>{
  \\"data\\": \\"data\\",
  \\"loading\\": false,
  \\"timestamp\\": 1572220801000
  }</div>
<div>{
  \\"data\\": \\"data\\",
  \\"loading\\": false,
  \\"timestamp\\": 1572220801000
  }</div>
<div><button data-testid=\\"button\\" type=\\"button\\">Move</button></div>"
`;

exports[`Scenario I 5`] = `
"<div>{
  \\"data\\": \\"data\\",
  \\"loading\\": false,
  \\"timestamp\\": 1572220801000
  }</div>
<div><button data-testid=\\"button\\" type=\\"button\\">Move</button></div>"
`;

exports[`Scenario I 6`] = `"<div><button data-testid=\\"button\\" type=\\"button\\">Move</button></div>"`;

exports[`Scenario I 7`] = `
"<div>{
  \\"data\\": \\"data\\",
  \\"loading\\": false,
  \\"timestamp\\": 1572220801000
  }</div>
<div><button data-testid=\\"button\\" type=\\"button\\">Move</button></div>"
`;

exports[`Scenario I 8`] = `
"<div>{
  \\"data\\": null,
  \\"loading\\": true,
  \\"timestamp\\": 1572220801000
  }</div>
<div>{
  \\"data\\": null,
  \\"loading\\": true,
  \\"timestamp\\": 1572220801000
  }</div>
<div><button data-testid=\\"button\\" type=\\"button\\">Move</button></div>"
`;

exports[`Scenario I 9`] = `
"<div>{
  \\"data\\": \\"data\\",
  \\"loading\\": false,
  \\"timestamp\\": 1572221162050
  }</div>
<div>{
  \\"data\\": \\"data\\",
  \\"loading\\": false,
  \\"timestamp\\": 1572221162050
  }</div>
<div><button data-testid=\\"button\\" type=\\"button\\">Move</button></div>"
`;

exports[`Scenario I 10`] = `
"<div>{
  \\"data\\": null,
  \\"loading\\": true,
  \\"timestamp\\": 1572221162050
  }</div>
<div><button data-testid=\\"button\\" type=\\"button\\">Move</button></div>"
`;

exports[`Scenario I 11`] = `"<div><button data-testid=\\"button\\" type=\\"button\\">Move</button></div>"`;

exports[`Scenario I 12`] = `
Array [
  Array [
    "A new ReactGlobalState is created:",
  ],
  Array [
    "- Initial state:",
    "no",
  ],
  Array [
    "- SSR mode:",
    "no",
  ],
  Array [
    "A new ReactGlobalState is created:",
  ],
  Array [
    "- Initial state:",
    "no",
  ],
  Array [
    "- SSR mode:",
    "no",
  ],
  Array [
    "ReactGlobalState update:",
  ],
  Array [
    "- Path:",
    "x",
  ],
  Array [
    "- New value:",
    Object {
      "data": null,
      "numRefs": 0,
      "operationId": "",
      "timestamp": 0,
    },
  ],
  Array [
    "- New state:",
    Object {
      "x": Object {
        "data": null,
        "numRefs": 0,
        "operationId": "",
        "timestamp": 0,
      },
    },
  ],
  Array [
    "ReactGlobalState update:",
  ],
  Array [
    "- Path:",
    "x.numRefs",
  ],
  Array [
    "- New value:",
    1,
  ],
  Array [
    "- New state:",
    Object {
      "x": Object {
        "data": null,
        "numRefs": 1,
        "operationId": "",
        "timestamp": 0,
      },
    },
  ],
  Array [
    "ReactGlobalState - useAsyncData data (re-)loading:",
  ],
  Array [
    "- Path:",
    "x",
  ],
  Array [
    "ReactGlobalState update:",
  ],
  Array [
    "- Path:",
    "x.operationId",
  ],
  Array [
    "- New value:",
    "00000000-0000-0000-0000-000000000001",
  ],
  Array [
    "- New state:",
    Object {
      "x": Object {
        "data": null,
        "numRefs": 1,
        "operationId": "00000000-0000-0000-0000-000000000001",
        "timestamp": 0,
      },
    },
  ],
  Array [
    "ReactGlobalState - useAsyncData data (re-)loaded:",
  ],
  Array [
    "- Path:",
    "x",
  ],
  Array [
    "- Data:",
    "data",
  ],
  Array [
    "ReactGlobalState update:",
  ],
  Array [
    "- Path:",
    "x",
  ],
  Array [
    "- New value:",
    Object {
      "data": "data",
      "numRefs": 1,
      "operationId": "",
      "timestamp": 1572220801000,
    },
  ],
  Array [
    "- New state:",
    Object {
      "x": Object {
        "data": "data",
        "numRefs": 1,
        "operationId": "",
        "timestamp": 1572220801000,
      },
    },
  ],
  Array [
    "A new ReactGlobalState is created:",
  ],
  Array [
    "- Initial state:",
    "no",
  ],
  Array [
    "- SSR mode:",
    "no",
  ],
  Array [
    "ReactGlobalState update:",
  ],
  Array [
    "- Path:",
    "x.numRefs",
  ],
  Array [
    "- New value:",
    2,
  ],
  Array [
    "- New state:",
    Object {
      "x": Object {
        "data": "data",
        "numRefs": 2,
        "operationId": "",
        "timestamp": 1572220801000,
      },
    },
  ],
  Array [
    "A new ReactGlobalState is created:",
  ],
  Array [
    "- Initial state:",
    "no",
  ],
  Array [
    "- SSR mode:",
    "no",
  ],
  Array [
    "ReactGlobalState update:",
  ],
  Array [
    "- Path:",
    "x.numRefs",
  ],
  Array [
    "- New value:",
    1,
  ],
  Array [
    "- New state:",
    Object {
      "x": Object {
        "data": "data",
        "numRefs": 1,
        "operationId": "",
        "timestamp": 1572220801000,
      },
    },
  ],
  Array [
    "A new ReactGlobalState is created:",
  ],
  Array [
    "- Initial state:",
    "no",
  ],
  Array [
    "- SSR mode:",
    "no",
  ],
  Array [
    "ReactGlobalState update:",
  ],
  Array [
    "- Path:",
    "x.numRefs",
  ],
  Array [
    "- New value:",
    0,
  ],
  Array [
    "- New state:",
    Object {
      "x": Object {
        "data": "data",
        "numRefs": 0,
        "operationId": "",
        "timestamp": 1572220801000,
      },
    },
  ],
  Array [
    "A new ReactGlobalState is created:",
  ],
  Array [
    "- Initial state:",
    "no",
  ],
  Array [
    "- SSR mode:",
    "no",
  ],
  Array [
    "ReactGlobalState update:",
  ],
  Array [
    "- Path:",
    "x.numRefs",
  ],
  Array [
    "- New value:",
    1,
  ],
  Array [
    "- New state:",
    Object {
      "x": Object {
        "data": "data",
        "numRefs": 1,
        "operationId": "",
        "timestamp": 1572220801000,
      },
    },
  ],
  Array [
    "A new ReactGlobalState is created:",
  ],
  Array [
    "- Initial state:",
    "no",
  ],
  Array [
    "- SSR mode:",
    "no",
  ],
  Array [
    "ReactGlobalState - useAsyncData data (re-)loading:",
  ],
  Array [
    "- Path:",
    "x",
  ],
  Array [
    "ReactGlobalState update:",
  ],
  Array [
    "- Path:",
    "x.operationId",
  ],
  Array [
    "- New value:",
    "00000000-0000-0000-0000-000000000002",
  ],
  Array [
    "- New state:",
    Object {
      "x": Object {
        "data": "data",
        "numRefs": 1,
        "operationId": "00000000-0000-0000-0000-000000000002",
        "timestamp": 1572220801000,
      },
    },
  ],
  Array [
    "ReactGlobalState update:",
  ],
  Array [
    "- Path:",
    "x.numRefs",
  ],
  Array [
    "- New value:",
    2,
  ],
  Array [
    "- New state:",
    Object {
      "x": Object {
        "data": "data",
        "numRefs": 2,
        "operationId": "00000000-0000-0000-0000-000000000002",
        "timestamp": 1572220801000,
      },
    },
  ],
  Array [
    "ReactGlobalState - useAsyncData data (re-)loaded:",
  ],
  Array [
    "- Path:",
    "x",
  ],
  Array [
    "- Data:",
    "data",
  ],
  Array [
    "ReactGlobalState update:",
  ],
  Array [
    "- Path:",
    "x",
  ],
  Array [
    "- New value:",
    Object {
      "data": "data",
      "numRefs": 2,
      "operationId": "",
      "timestamp": 1572221162050,
    },
  ],
  Array [
    "- New state:",
    Object {
      "x": Object {
        "data": "data",
        "numRefs": 2,
        "operationId": "",
        "timestamp": 1572221162050,
      },
    },
  ],
  Array [
    "A new ReactGlobalState is created:",
  ],
  Array [
    "- Initial state:",
    "no",
  ],
  Array [
    "- SSR mode:",
    "no",
  ],
  Array [
    "ReactGlobalState update:",
  ],
  Array [
    "- Path:",
    "x.numRefs",
  ],
  Array [
    "- New value:",
    1,
  ],
  Array [
    "- New state:",
    Object {
      "x": Object {
        "data": "data",
        "numRefs": 1,
        "operationId": "",
        "timestamp": 1572221162050,
      },
    },
  ],
  Array [
    "ReactGlobalState - useAsyncData data (re-)loading:",
  ],
  Array [
    "- Path:",
    "x",
  ],
  Array [
    "ReactGlobalState update:",
  ],
  Array [
    "- Path:",
    "x.operationId",
  ],
  Array [
    "- New value:",
    "00000000-0000-0000-0000-000000000003",
  ],
  Array [
    "- New state:",
    Object {
      "x": Object {
        "data": "data",
        "numRefs": 1,
        "operationId": "00000000-0000-0000-0000-000000000003",
        "timestamp": 1572221162050,
      },
    },
  ],
  Array [
    "ReactGlobalState - useAsyncData data (re-)loaded:",
  ],
  Array [
    "- Path:",
    "x",
  ],
  Array [
    "- Data:",
    "data",
  ],
  Array [
    "ReactGlobalState update:",
  ],
  Array [
    "- Path:",
    "x",
  ],
  Array [
    "- New value:",
    Object {
      "data": "data",
      "numRefs": 1,
      "operationId": "",
      "timestamp": 1572221523060,
    },
  ],
  Array [
    "- New state:",
    Object {
      "x": Object {
        "data": "data",
        "numRefs": 1,
        "operationId": "",
        "timestamp": 1572221523060,
      },
    },
  ],
  Array [
    "A new ReactGlobalState is created:",
  ],
  Array [
    "- Initial state:",
    "no",
  ],
  Array [
    "- SSR mode:",
    "no",
  ],
  Array [
    "ReactGlobalState update:",
  ],
  Array [
    "- Path:",
    "x.numRefs",
  ],
  Array [
    "- New value:",
    0,
  ],
  Array [
    "- New state:",
    Object {
      "x": Object {
        "data": "data",
        "numRefs": 0,
        "operationId": "",
        "timestamp": 1572221523060,
      },
    },
  ],
]
`;
